--- a/web/public/index.html
+++ b/web/public/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
   Enter a URL here:
   <form method="POST">
-    <input type="input" name="url"></input>
+    <input id="siteInput" type="input" name="url"></input>
   </form>
 </body>
 </html>
